# desafio_oxebots

./: CMakeLists.txt  README.md  package.xml
launch/: desafio.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py
models/maze/: model.config  model.sdf.temp
models/maze/meshes/: model-1.dae  model-2.dae  model-3.dae
models/turtlebot3_burger/: model.sdf
urdf/: turtlebot3_burger.urdf
worlds/: desafio_world.world
